[package]
name = "rotato"
version = "0.1.2"
edition = "2021"
authors = ["ning <<qiafan@gmail.com>>"]
readme = "README.md"
description = "Commonly used Rust tools."
repository = "https://github.com/qiafan666/rotato"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
